--- a/TP-Parcial/TP-Parcial/TP-Parcial.csproj
+++ b/TP-Parcial/TP-Parcial/TP-Parcial.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201008025805_version 2.cs" />
+    <Compile Remove="Migrations\20201008025805_version 2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
